dragon/assets/css/style.css
/* ------------ DragonX Style Sheet------------- */

/* ---------------Box Sizing----------------- */

/*Colors
#3498db (blue)
#FF4E15 (orange-red)
#ffffff (white)
#000000 (black)
#A6A8AB (grey)*/

html {
  box-sizing: border-box;
  color:#ffffff;
  background-color: #000000;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}

/* ---------------Utility Styles----------------- */

.container{
  width:80vw;
  margin:40px auto;
  max-width:900px;
  color:#ffffff;
  background-color: #000000;
}

.img-right{
  float:right;
  padding:5px;
  border:1px solid #A6A8AB;
  margin: 10px 0 10px 20px;
}

.img-left{
  float:left;
  padding:5px;
  border:1px solid #A6A8AB;
  margin: 10px 20px 10px 0;
}

.img-center{
  display:block;
  padding:5px;
  border:1px solid #A6A8AB;
  margin: 20px auto;
}

/* ---------------Responsive Images----------------- */
img{
  max-width:100%;
  height:auto;
}

/* ---------------Global Styles----------------- */
body{
  font-family: 'Orbitron', sans-serif;
  margin: 0;
}

header.primary{
  text-align: center;
  background-image: url("../img/header.jpg");
  background-repeat: no-repeat;
  background-position: center top;
}

header.primary h1 {
  font-size: .15rem;
  color: #000000;
  margin: 20px 0;
}

header.primary h2{
  font-size:1.4rem;
}

header.primary nav{
  width:80vw;
  margin: 20px auto;
  max-width:900px;
  padding-top: 235px;
}

header.primary nav ul{
  display:flex;
  flex-direction:row;
  justify-content: space-around;
  padding-top: 10px;
  padding-bottom: 10px;
  border-bottom: 3px double #c0c0c0;
}

header.primary nav ul li{
  list-style-type:none;
  font-size:1.4rem;
  font-weight:bold;
  text-transform: uppercase;
}

header.primary nav ul li a:link, 
header.primary nav ul li a:visited{
  color: #FF4E15;
  text-decoration:none;
  transition:.5s;
}

header.primary nav ul li a:hover, 
header.primary nav ul li a:active{
  color: #3498db;
  transition:.5s;
}

#intro{
  border-bottom: 1px solid #A6A8AB;
  padding-bottom: 1.5em;  
}

#intro h3{
  padding:0;
  font-size:1.5rem;
  font-weight:bold;
  color: #3498db;
}

#intro ul{
  padding-bottom: 50px;
}

#intro ul li{
  list-style-type:none;
  text-decoration:none;
  font-weight: bold;
  font-size: 1.1rem;
  padding: 10px 0px;
}

#intro ul li a:link, 
#intro ul li a:visited{
  color:#ffffff;
  text-decoration:none;
  transition:.5s;
}

#intro ul li a:hover, 
#intro ul li a:active{
  color: #FF4E15;
  transition:.5s;
}

#information {
  border-bottom: 1px solid #A6A8AB;
  padding-bottom: 1.5em;  
}

#information h3{
  padding:0;
  font-size:1.5rem;
  font-weight:bold;
  color: #3498db;
}

#content {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  border-bottom:1px solid #A6A8AB;
  padding-bottom:2.6rem;
}

#questions {
  width:80vw;
  margin:40px auto;
  max-width:900px;
  border-bottom:1px solid #A6A8AB;
}

#questions h3{
  padding:0;
  font-size:1.5rem;
  font-weight:bold;
  color: #3498db;
}

#questions ul li{
  list-style-type:none;
  text-decoration:none;
  font-weight: bold;
  font-size: 1.3rem;
  padding: 10px 0px;
}

#questions ul li a:link, 
#questions ul li a:visited{
  color: #FFFFFF;
  text-decoration:none;
  transition:.5s;
}

#questions ul li a:hover, 
#questions ul li a:active{
  color: #FF4E15;
  text-decoration: none;
  transition:.5s;
}

#answers{
  width:80vw;
  margin:40px auto;
  max-width:900px;
  border-bottom:1px solid #A6A8AB;
}

#answers dt{
  font-size: 1.3rem;
  color: #3498db;
}

#answers a{
  font-style: italic;
  margin-left: 10px;
  text-decoration:none;
}

#answers a:link,
#answers a:visited{
  color: #FF4E15;
  text-decoration:none;
}

#answers a:hover,
#answers a:active{
  color: #3498db;
  transition:.5s;
}


table{
  width:100%;
  border:1px solid #A6A8AB;
  border-collapse:collapse;
  font-size: .8em;
  background-color: #525354;
}

table caption{
  color: #1587D4;
  padding-bottom: 20px;
  font-weight:bold;
  font-size:1.5rem;
  text-align: left;
}

table tr:nth-child(even){
  background: rgba(57,58,59,.9)
}

table tr:hover{
  background: rgba(0,0,0,.6)
}

table th{
  background-color:#252626;
  color:#ffffff;
  width:20%;
  padding:10px;
}

table td {
  border:1px solid #A6A8AB;
  padding:5px;
}

#colophon h6{
  color: #FF4E15;
  width: 80vw;
  max-width: 800;
  margin: 20px auto;
  text-transform:uppercase;
}

#colophon h6 ul{
  display:flex;
  flex-direction:row;
  justify-content: space-around;
}

#colophon h6 ul li{
  list-style-type:none;
  font-size:.9rem;
}

#colophon h6 ul li a:link, 
#colophon h6 ul li a:visited{
  color: #FF4E15;
  text-decoration:none;
  transition:.5s;
}

#colophon h6 ul li a:hover, 
#colophon h6 ul li a:active{
  color: #3498db;
  transition:.5s;
}

